// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Unstake > Claim Rewards operation > should render the claim rewards view 1`] = `
<div
  class="operation"
>
  <div
    class="dusk-wizard"
  >
    <div
      slot="stepper"
    >
      <div
        class="dusk-stepper dusk-stepper--variant--primary"
        style="--columns: 2; --progress-width: 0%;"
      >
        <span
          aria-current="step"
          aria-labelledby="step-some-generated-id"
          class="dusk-stepper__step dusk-stepper__step--processed"
        >
          1
        </span>
         
        <span
          class="dusk-stepper__step-label"
          id="step-some-generated-id"
        >
          Overview
           
        </span>
        <span
          aria-labelledby="step-some-generated-id"
          class="dusk-stepper__step"
        >
          2
        </span>
         
        <span
          class="dusk-stepper__step-label dusk-stepper__step-label--invisible"
          id="step-some-generated-id"
        >
          Done
           
        </span>
        
      </div>
      
    </div>
     
     
     
    <div
      class="operation__unstake svelte-7h1pr5"
    >
      <div
        class="contract-statuses svelte-1up3579"
      >
        <dl
          class="contract-statuses__list svelte-1up3579"
        >
          <dt
            class="contract-statuses__label svelte-1up3579"
          >
            Spendable
             
          </dt>
          <dd
            class="contract-statuses__value svelte-1up3579"
          >
            <span>
              1,000.000000000
            </span>
             
            <svg
              class="dusk-icon dusk-icon--size--default contract-statuses__icon"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="DUSK"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
              />
            </svg>
            
             
          </dd>
          <dt
            class="contract-statuses__label svelte-1up3579"
          >
            Total Locked
             
          </dt>
          <dd
            class="contract-statuses__value svelte-1up3579"
          >
            <span>
              278.000000000
            </span>
             
            <svg
              class="dusk-icon dusk-icon--size--default contract-statuses__icon"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="DUSK"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
              />
            </svg>
            
             
          </dd>
          <dt
            class="contract-statuses__label svelte-1up3579"
          >
            Rewards
             
          </dt>
          <dd
            class="contract-statuses__value svelte-1up3579"
          >
            <span>
              345.000000000
            </span>
             
            <svg
              class="dusk-icon dusk-icon--size--default contract-statuses__icon"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="DUSK"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
              />
            </svg>
            
             
          </dd>
        </dl>
         
      </div>
       
      <span
        class="dusk-badge dusk-badge--variant-warning"
      >
        REVIEW TRANSACTION
      </span>
       
      <dl
        class="stake-overview svelte-1uhmq4r"
      >
        <dt
          class="stake-overview__label"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17L7,12H10V8H14V12H17L12,17M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M5,5V19H19V5H5Z"
            />
          </svg>
          
           
          <span>
            Rewards Amount
            :
          </span>
           
        </dt>
        <dd
          class="stake-overview__value svelte-1uhmq4r"
        >
          <span
            class="svelte-1uhmq4r"
          >
            345.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--default stake-overview__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
        </dd>
      </dl>
       
      <div
        class="gas-settings svelte-1daay07"
      >
        <dl
          class="gas-settings__edit svelte-1daay07"
        >
          <div
            class="gas-fee svelte-1c6b481"
          >
            <span>
              Fee:
            </span>
             
            <div
              class="gas-fee__amount svelte-1c6b481"
            >
              <div
                class="gas-fee__amount-value svelte-1c6b481"
              >
                <span
                  class="svelte-1c6b481"
                >
                  max
                </span>
                 
                <span
                  class="svelte-1c6b481"
                >
                  0.020000000
                </span>
              </div>
               
              <svg
                class="dusk-icon dusk-icon--size--default dusk-amount__icon"
                data-tooltip-id="main-tooltip"
                data-tooltip-text="DUSK"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
                />
              </svg>
              
            </div>
          </div>
          <dd>
            <button
              class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
              type="button"
            >
              <span
                class="dusk-button__text"
              >
                EDIT
              </span>
            </button>
          </dd>
        </dl>
         
      </div>
    </div>
     
    <div
      class="dusk-wizard__step-navigation"
    >
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
          />
        </svg>
        
         
        <span
          class="dusk-button__text"
        >
          Back
        </span>
        
      </button>
      
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default dusk-icon-button--labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M22 10.87L19.26 9.28C19.5 9.07 19.73 8.8 19.9 8.5C20.73 7.07 20.24 5.23 18.8 4.4C17.94 3.9 16.93 3.9 16.08 4.26L16.09 4.25L15.21 4.64L15.1 3.68L15.09 3.69C15 2.78 14.47 1.9 13.61 1.4C12.17 .575 10.34 1.07 9.5 2.5C9.33 2.8 9.22 3.13 9.16 3.45L6.41 1.87C5.45 1.32 4.23 1.64 3.68 2.6L2.18 5.2C1.9 5.68 2.07 6.29 2.55 6.56L4.28 7.56L8.5 10H2V20C2 21.11 2.9 22 4 22H20C21.11 22 22 21.11 22 20V14.87L22.73 13.6C23.28 12.64 22.96 11.42 22 10.87M16.44 6.5C16.71 6 17.33 5.86 17.8 6.13C18.28 6.41 18.45 7 18.17 7.5C17.89 8 17.28 8.14 16.8 7.87C16.33 7.59 16.16 7 16.44 6.5M14.07 8.6L21 12.6L20 14.33L13.07 10.33L14.07 8.6M11 20H4V12H11V20M11.34 9.33L4.41 5.33L5.41 3.6L12.34 7.6L11.34 9.33M11.61 4.87C11.13 4.59 10.97 4 11.24 3.5C11.5 3 12.13 2.86 12.61 3.13C13.09 3.41 13.25 4 12.97 4.5C12.7 5 12.09 5.14 11.61 4.87M13 20V12.6L20 16.64V20H13Z"
          />
        </svg>
        
         
        <span
          class="dusk-button__text"
        >
          Claim Rewards
        </span>
        
      </button>
    </div>
    
    
     
    
  </div>
</div>
`;

exports[`Unstake > Unstake operation > should render the unstake view 1`] = `
<div
  class="operation"
>
  <div
    class="dusk-wizard"
  >
    <div
      slot="stepper"
    >
      <div
        class="dusk-stepper dusk-stepper--variant--primary"
        style="--columns: 2; --progress-width: 0%;"
      >
        <span
          aria-current="step"
          aria-labelledby="step-some-generated-id"
          class="dusk-stepper__step dusk-stepper__step--processed"
        >
          1
        </span>
         
        <span
          class="dusk-stepper__step-label"
          id="step-some-generated-id"
        >
          Overview
           
        </span>
        <span
          aria-labelledby="step-some-generated-id"
          class="dusk-stepper__step"
        >
          2
        </span>
         
        <span
          class="dusk-stepper__step-label dusk-stepper__step-label--invisible"
          id="step-some-generated-id"
        >
          Done
           
        </span>
        
      </div>
      
    </div>
     
     
     
    <div
      class="operation__unstake svelte-7h1pr5"
    >
      <div
        class="contract-statuses svelte-1up3579"
      >
        <dl
          class="contract-statuses__list svelte-1up3579"
        >
          <dt
            class="contract-statuses__label svelte-1up3579"
          >
            Spendable
             
          </dt>
          <dd
            class="contract-statuses__value svelte-1up3579"
          >
            <span>
              1,000.000000000
            </span>
             
            <svg
              class="dusk-icon dusk-icon--size--default contract-statuses__icon"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="DUSK"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
              />
            </svg>
            
             
          </dd>
          <dt
            class="contract-statuses__label svelte-1up3579"
          >
            Total Locked
             
          </dt>
          <dd
            class="contract-statuses__value svelte-1up3579"
          >
            <span>
              278.000000000
            </span>
             
            <svg
              class="dusk-icon dusk-icon--size--default contract-statuses__icon"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="DUSK"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
              />
            </svg>
            
             
          </dd>
          <dt
            class="contract-statuses__label svelte-1up3579"
          >
            Rewards
             
          </dt>
          <dd
            class="contract-statuses__value svelte-1up3579"
          >
            <span>
              345.000000000
            </span>
             
            <svg
              class="dusk-icon dusk-icon--size--default contract-statuses__icon"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="DUSK"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
              />
            </svg>
            
             
          </dd>
        </dl>
         
      </div>
       
      <span
        class="dusk-badge dusk-badge--variant-warning"
      >
        REVIEW TRANSACTION
      </span>
       
      <dl
        class="stake-overview svelte-1uhmq4r"
      >
        <dt
          class="stake-overview__label"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17L7,12H10V8H14V12H17L12,17M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M5,5V19H19V5H5Z"
            />
          </svg>
          
           
          <span>
            Unstake Amount
            :
          </span>
           
        </dt>
        <dd
          class="stake-overview__value svelte-1uhmq4r"
        >
          <span
            class="svelte-1uhmq4r"
          >
            278.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--default stake-overview__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
        </dd>
      </dl>
       
      <div
        class="gas-settings svelte-1daay07"
      >
        <dl
          class="gas-settings__edit svelte-1daay07"
        >
          <div
            class="gas-fee svelte-1c6b481"
          >
            <span>
              Fee:
            </span>
             
            <div
              class="gas-fee__amount svelte-1c6b481"
            >
              <div
                class="gas-fee__amount-value svelte-1c6b481"
              >
                <span
                  class="svelte-1c6b481"
                >
                  max
                </span>
                 
                <span
                  class="svelte-1c6b481"
                >
                  0.020000000
                </span>
              </div>
               
              <svg
                class="dusk-icon dusk-icon--size--default dusk-amount__icon"
                data-tooltip-id="main-tooltip"
                data-tooltip-text="DUSK"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
                />
              </svg>
              
            </div>
          </div>
          <dd>
            <button
              class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
              type="button"
            >
              <span
                class="dusk-button__text"
              >
                EDIT
              </span>
            </button>
          </dd>
        </dl>
         
      </div>
    </div>
     
    <div
      class="dusk-wizard__step-navigation"
    >
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
          />
        </svg>
        
         
        <span
          class="dusk-button__text"
        >
          Back
        </span>
        
      </button>
      
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default dusk-icon-button--labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 13.09V7C20 4.79 16.42 3 12 3S4 4.79 4 7V17C4 19.21 7.59 21 12 21C12.46 21 12.9 21 13.33 20.94C13.12 20.33 13 19.68 13 19L13 18.95C12.68 19 12.35 19 12 19C8.13 19 6 17.5 6 17V14.77C7.61 15.55 9.72 16 12 16C12.65 16 13.27 15.96 13.88 15.89C14.93 14.16 16.83 13 19 13C19.34 13 19.67 13.04 20 13.09M18 12.45C16.7 13.4 14.42 14 12 14S7.3 13.4 6 12.45V9.64C7.47 10.47 9.61 11 12 11S16.53 10.47 18 9.64V12.45M12 9C8.13 9 6 7.5 6 7S8.13 5 12 5 18 6.5 18 7 15.87 9 12 9M22 20L19 23L16 20H18V16H20V20H22Z"
          />
        </svg>
        
         
        <span
          class="dusk-button__text"
        >
          Unstake
        </span>
        
      </button>
    </div>
    
    
     
    
  </div>
</div>
`;
